welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:3: error: not found: value estSurBiscuits
  if (estSurBiscuits && !porteBiscuit() && estFaceMur()){prendBiscuit();retourne()}
      ^