welcome.lessons.welcome.summative.Moria.scala.code
retourne()
while (!estFaceMur()){
  if (estSurBiscuits && !porteBiscuit() && estFaceMur()){prendBiscuit();retourne()}
  if (estSurBiscuit() && !porteBiscuit()){prendBiscuit();retourne();avance()}
  if (!estSurBiscuit() && !porteBiscuit()){avance()}
  if (!estSurBiscuit() && porteBiscuit()){avance()}
  if (estSurBiscuit() && porteBiscuit()){recule();poseBiscuit();retourne();avance()}
}
droite()
avance()
gauche()
avance()